--- a/consultas.html
+++ b/consultas.html
@@ -327,11 +327,11 @@
                         <div class="services__item__text">
                             <h5>Testes Diagnósticos</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Teste do pezinho</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Teste rápido de amigdalite
+                                <li><a href="pages/teste.htmlA"><i class="fa fa-check-circle"></i> Teste do pezinho</a></li>
+                                <li><a href="pages-teste.html#B"><i class="fa fa-check-circle"></i> Teste rápido de amigdalite
                                         bacteriana</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Teste rápido de malária</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Teste rápido de urina</a></li>
+                                <li><a href="pages-teste.html#D"><i class="fa fa-check-circle"></i> Teste rápido de malária</a></li>
+                                <li><a href="pages-teste.html#E"><i class="fa fa-check-circle"></i> Teste rápido de urina</a></li>
                             </ul>
                         </div>
                     </div>
