--- a/header.html
+++ b/header.html
@@ -133,7 +133,7 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="additional-services.html">Vacinação<span
+                        <li><a class="arrow" href="pages/vacinacao.html">Vacinação<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="pages/vacinacao.html#A">Adulto</a></li>
@@ -171,7 +171,7 @@
                                         <br>
                                         <span><img src="img/icons/Exercício Fisico.png" alt="">Exercício Físico</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Plano de treino para a gravidez</a></li>
+                                            <li><a href="pages/gravidez.html#E">Plano de treino para a gravidez</a></li>
                                         </ul>
 
                                     </li>
@@ -198,14 +198,14 @@
                         <li><a class="arrow" href="pages/domicilio.html">Apoio ao domicílio <span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="pages/domicilio.html#A">Amamentação</a></li>
-                                <li><a href="pages/domicilio.html#B">Enfermagem</a></li>
+                                <li><a href="pages/domicilio.html">Amamentação</a></li>
+                                <li><a href="pages/domicilio.html#conseferm">Enfermagem</a></li>
                                 <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
                         <li><a class="arrow">Workshops<span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="pages/workshop.html">Workshops</a></li>
+                                <li><a href="pages/workshop.html">Workshops/Grupos de Apoio</a></li>
                                 <li><a href="pages/workshop-amament.html">Amamentação</a></li>
                                 <li><a href="pages/workshop-bebe.html">Bebé</a></li>
                                 <li><a href="pages/workshp-gravidez.html">Gravidez</a></li>
