--- a/team.html
+++ b/team.html
@@ -188,7 +188,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            src="../img/icons/heart-color.png" class="mr-2" style="width: 2rem;"
                                             alt="">Atendimento ao
                                         Paciente
                                     </h2>
@@ -258,7 +258,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            src="../img/icons/Estetoscópio.png" class="mr-2" style="width: 2rem;"
                                             alt="">Especialistas
                                     </h2>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
@@ -399,7 +399,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/Exercício Fisico.png" class="mr-2" style="width: 2rem;"
+                                            src="../img/icons/workshop-color.png" class="mr-2" style="width: 2rem;"
                                             alt="">Parcerias
                                     </h2>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
