--- a/pages/header.html
+++ b/pages/header.html
@@ -173,7 +173,7 @@
                                         <span><img src="../img/icons/Exercício Fisico.png" alt="">Exercício
                                             Físico</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Plano de treino para a gravidez</a></li>
+                                            <li><a href="gravidez.html#E">Plano de treino para a gravidez</a></li>
                                         </ul>
 
                                     </li>
@@ -200,8 +200,8 @@
                         <li><a class="arrow" href="domicilio.html">Apoio ao domicílio <span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="domicilio.html#A">Amamentação</a></li>
-                                <li><a href="domicilio.html#B">Enfermagem</a></li>
+                                <li><a href="domicilio.html">Amamentação</a></li>
+                                <li><a href="domicilio.html#conseferm">Enfermagem</a></li>
                                 <li><a href="teste.html#A">Teste do pezinho</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
