--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -294,7 +294,7 @@
                                     <div class="d-flex">
                                         <div class="col-lg-6 col-md-6 ">
                                             <a class="d-grid text-center justify-content-center"
-                                                href="curso-prep-grupo.html.html">
+                                                href="curso-prep-grupo.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/gravidez-white.png" style="width: 75px;">
                                                 </div>
