--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -289,7 +289,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/bira.jpg" alt="">
+                                <img src="../img/blog/details/bira.png" alt="">
                             </div>
                             <div class="blog__item__text">
                                 <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
