--- a/pages/workshop-primeiros-socoros.html
+++ b/pages/workshop-primeiros-socoros.html
@@ -238,7 +238,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/Snoezelen.png" alt="">
+                                <img src="../img/blog/details/Snoezelen.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
                                 <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
