--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -101,17 +101,6 @@
         <div class="container mt-9">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/workshop.jpg"
                 style="background: url('../img/blog/details/workshop.jpg') no-repeat center center/cover; height: 400px;">
-                <div class="row d-flex justify-content-start h-100">
-                    <div class="col-lg-7 text-start d-flex align-items-start">
-                        <div class="blog__hero__text p-4 rounded shadow"
-                            style="max-width: 90%; position: absolute; top: 5rem; left: 20px; background: #d6a294; color: white;">
-                            <div class="services__details__title">
-                                <h3 class="text-white"><img src="../img/icons/horario.png"
-                                        style="width: 3rem; color: white;" class="fa mr-3" alt="">25/02/2025</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="row d-flex justify-content-center mt-3">
                 <div class="col-lg-12">
@@ -259,7 +248,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/Snoezelen.png" alt="">
+                                <img src="../img/blog/details/Snoezelen.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
                                 <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
@@ -289,7 +278,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/bira.jpg" alt="">
+                                <img src="../img/blog/details/bira.png" alt="">
                             </div>
                             <div class="blog__item__text">
                                 <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
