--- a/pages/workshp-gravidez.html
+++ b/pages/workshp-gravidez.html
@@ -171,7 +171,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/Snoezelen.png">
+                                            data-setbg="../img/blog/details/Snoezelen.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
