--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -823,7 +823,7 @@
             doutora.textContent = "Dra Inês Claudino";
             title.textContent = "Consulta de Pediatria de Rotina";
             subtitulo.textContent = "Uma Pediatra não é uma médica como as outras, é alguém que acompanha toda a família!";
-            img.src = "../img/blog/details/blog-hero10.png";
+            img.src = "../img/blog/details/blog-hero10.jpg";
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
             CBtn.classList.remove("active");
