--- a/consultas.html
+++ b/consultas.html
@@ -133,7 +133,7 @@
                         <div class="blog__hero__text">
                             <h2>Here’s how you can get a natural glow this party season</h2>
                             <ul>
-                                <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                                <li><img src="img/blog/blog-author.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                 <li>Dec 06, 2019</li>
                             </ul>
                         </div>
@@ -327,11 +327,15 @@
                         <div class="services__item__text">
                             <h5>Testes Diagnósticos</h5>
                             <ul>
-                                <li><a href="pages/teste.htmlA"><i class="fa fa-check-circle"></i> Teste do pezinho</a></li>
-                                <li><a href="pages-teste.html#B"><i class="fa fa-check-circle"></i> Teste rápido de amigdalite
+                                <li><a href="pages/teste.htmlA"><i class="fa fa-check-circle"></i> Teste do pezinho</a>
+                                </li>
+                                <li><a href="pages-teste.html#B"><i class="fa fa-check-circle"></i> Teste rápido de
+                                        amigdalite
                                         bacteriana</a></li>
-                                <li><a href="pages-teste.html#D"><i class="fa fa-check-circle"></i> Teste rápido de malária</a></li>
-                                <li><a href="pages-teste.html#E"><i class="fa fa-check-circle"></i> Teste rápido de urina</a></li>
+                                <li><a href="pages-teste.html#D"><i class="fa fa-check-circle"></i> Teste rápido de
+                                        malária</a></li>
+                                <li><a href="pages-teste.html#E"><i class="fa fa-check-circle"></i> Teste rápido de
+                                        urina</a></li>
                             </ul>
                         </div>
                     </div>
