--- a/humanitario.html
+++ b/humanitario.html
@@ -111,7 +111,7 @@
                             <div class="blog__hero__text">
                                 <h2>Here’s how you can get a natural glow this party season</h2>
                                 <ul>
-                                    <li><img src="img/blog/blog-author.jpg" alt=""> John Doe</li>
+                                    <li><img src="img/blog/blog-author.jpg" alt=""> Dra Patrícia P. Ronquillo</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
